Finished bamboo_htb